test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-app
  namespace: dev
  labels:
    app:  docker-app
spec:
  selector:
    matchLabels:
      app: docker-app
  replicas: 1
  template:
    metadata:
      labels:
        app:  docker-app
    spec:
      containers:
      - name:  docker-app
        image: nginx:1.14.2
        ports:
        - containerPort:  80
          name:  docker-app
