test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  namespace: dev
spec:
  selector:
    app: docker-app
  type: ClusterIP
  ports:
  - name: docker-app
    protocol: TCP
    port: 80
    targetPort: 80
