test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: dev
  annotations:
     kubernetes.io/ingress.class: nginx

spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: docker-app
              port:
               number: 80
